[package]
authors = [
	"Marius Scholtz <mc.scholtz@gmail.com>"]
description = "Register map for STM32F407 microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32f407"]
license = "MIT OR Apache-2.0"
name = "stm32f407"
repository = "https://github.com/mcscholtz/stm32f407"
version = "0.2.1"

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.0"
vcell = "0.1.3"
